--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -38,7 +38,15 @@ on:
         required: false
         type: string
         default: "main"
-
+    secrets:
+      DOCKER_HUB_USERNAME:
+        required: true
+      DOCKER_HUB_TOKEN:
+        required: true
+      GH_TOKEN:
+        required: true
+      QA_SLACK_WEBHOOK_URL:
+        required: true
 env:
   NODE_VERSION: "20"
 
