--- a/.env.local.e2e
+++ b/.env.local.e2e
@@ -1,8 +1,8 @@
-PARALLEL=false
+PARALLEL=true
 DEV_MODE=true
 RPC_URL=http://localhost:9944
 WEBSOCKET=ws://localhost:9944
 ANVIL=http://localhost:8545
-ZKV_CONTRACT=0x5FbDB2315678afecb367f032d93F642f64180aa3
+ZKV_CONTRACT=
 SEED_PHRASE_1=//Alice
 
