fix to run proof generation with docker

--- a/src/proof-generator/Dockerfile
+++ b/src/proof-generator/Dockerfile
@@ -10,9 +10,11 @@ COPY .env.generator ./
 
 COPY src/utils ./src/utils
 
+COPY src/config.ts ./src/config.ts 
+
 COPY src/proof-generator ./src/proof-generator
 
 ENV INTERVAL=5
 ENV DURATION=60
 
-CMD ["npm", "run", "generate:groth16"]
+CMD ["npm", "run", "generate:proofs"]
