Another change to slack message

--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -40,14 +40,16 @@ jobs:
           FAILED=0
           SKIPPED=0
           TOTAL=0
+          BUILD_ERRORS=0  # Initialize build errors to 0
           SUITE_FAILED=0
           SUITE_ERROR=false
           
           if [ ! -s src/rpc-tests/reports/test_output.txt ]; then
             echo "Test output file is missing or empty. Marking as failure."
+            BUILD_ERRORS=1  # Set build errors to 1 for missing output file
             echo "OVERALL_STATUS=failure" >> $GITHUB_ENV
             echo "OVERALL_STATUS_EMOJI=:red_circle:" >> $GITHUB_ENV
-            echo "SLACK_MESSAGE=:red_circle: *zkVerify RPC TEST STATUS:* failure :red_circle:\n*Error:* Tests failed to run or no output was generated." >> $GITHUB_ENV
+            echo "BUILD_ERRORS=$BUILD_ERRORS" >> $GITHUB_ENV
             exit 1
           else
             TEST_OUTPUT=$(cat src/rpc-tests/reports/test_output.txt)
@@ -56,6 +58,7 @@ jobs:
               SUITE_FAILED=$(echo "$TEST_OUTPUT" | awk '/Test Suites:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
               if echo "$TEST_OUTPUT" | grep -q 'Test suite failed to run'; then
                 SUITE_ERROR=true
+                BUILD_ERRORS=1  # Set build errors to 1 for suite errors
               fi
             fi
           
@@ -77,25 +80,18 @@ jobs:
             echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
             echo "TOTAL=$TOTAL" >> $GITHUB_ENV
             echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
+            echo "BUILD_ERRORS=$BUILD_ERRORS" >> $GITHUB_ENV
           
-            if [ "$FAILED" -eq 0 ] && [ "$SUITE_FAILED" -eq 0 ]; then
+            if [ "$FAILED" -eq 0 ] && [ "$SUITE_FAILED" -eq 0 ] && [ "$BUILD_ERRORS" -eq 0 ]; then
               OVERALL_STATUS="success"
               OVERALL_STATUS_EMOJI=":large_green_circle:"
-              SLACK_MESSAGE=":large_green_circle: *zkVerify RPC TEST STATUS:* success :large_green_circle:\n*Test Results:*\n*Passed:* $PASSED\n*Failed:* $FAILED\n*Skipped:* $SKIPPED\n*Total:* $TOTAL"
             else
               OVERALL_STATUS="failure"
               OVERALL_STATUS_EMOJI=":red_circle:"
-          
-              if [ "$SUITE_ERROR" == "true" ]; then
-                SLACK_MESSAGE=":red_circle: *zkVerify RPC TEST STATUS:* failure :red_circle:\n*Error:* Some test suite(s) failed to run due to errors."
-              else
-                SLACK_MESSAGE=":red_circle: *zkVerify RPC TEST STATUS:* failure :red_circle:\n*Test Results:*\n*Passed:* $PASSED\n*Failed:* $FAILED\n*Skipped:* $SKIPPED\n*Total:* $TOTAL"
-              fi
             fi
           
             echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
             echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
-            echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
           
             if [ "$OVERALL_STATUS" == "failure" ]; then
               exit 1
@@ -113,12 +109,13 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "${{ env.SLACK_MESSAGE }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
+                    "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify RPC TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n*Test Results:*\n*Pass:* ${{ env.PASSED }} *Fail:* ${{ env.FAILED }} *Skip:* ${{ env.SKIPPED }} *Total:* ${{ env.TOTAL }}\n*Build Errors:* ${{ env.BUILD_ERRORS }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
                   }
                 }
               ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
+
 
 
