--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -24,78 +24,79 @@ jobs:
         run: |
           mkdir -p src/rpc-tests/reports
           docker run --rm rpc-tests:latest \
-            -e SEED_PHRASE_1=${{ secrets.QA_SEED_PHRASE_1 }} \
-            -e SEED_PHRASE_2=${{ secrets.QA_SEED_PHRASE_2 }} \
-            -e SEED_PHRASE_3=${{ secrets.QA_SEED_PHRASE_3 }} \
-            -e SEED_PHRASE_4=${{ secrets.QA_SEED_PHRASE_4 }} \
-            -e SEED_PHRASE_5=${{ secrets.QA_SEED_PHRASE_5 }} \
-            -e SEED_PHRASE_6=${{ secrets.QA_SEED_PHRASE_6 }} \
+            -e SEED_PHRASE=${{ secrets.QA_SEED_PHRASE }} \
             -v ${{ github.workspace }}/src/rpc-tests/reports:/usr/src/app/reports \
             2>&1 | tee src/rpc-tests/reports/test_output.txt
         working-directory: .
 
       - name: Parse Test Results
         run: |
+          TEST_OUTPUT=$(cat src/rpc-tests/reports/test_output.txt || echo "")
+
+          # Initialize variables
           PASSED=0
           FAILED=0
           SKIPPED=0
           TOTAL=0
-          BUILD_ERRORS=0  # Initialize build errors to 0
           SUITE_FAILED=0
-          SUITE_ERROR=false
-          
-          if [ ! -s src/rpc-tests/reports/test_output.txt ]; then
-            echo "Test output file is missing or empty. Marking as failure."
-            BUILD_ERRORS=1  # Set build errors to 1 for missing output file
-            echo "OVERALL_STATUS=failure" >> $GITHUB_ENV
-            echo "OVERALL_STATUS_EMOJI=:red_circle:" >> $GITHUB_ENV
-            echo "BUILD_ERRORS=$BUILD_ERRORS" >> $GITHUB_ENV
-            exit 1
-          else
-            TEST_OUTPUT=$(cat src/rpc-tests/reports/test_output.txt)
-          
+          OVERALL_STATUS="failure"
+          OVERALL_STATUS_EMOJI=":red_circle:"
+          SLACK_MESSAGE="*Test report was not available to parse.*"
+
+          # Check if test report is available
+          if [ -s src/rpc-tests/reports/test_output.txt ]; then
+            # Parse suite results
             if echo "$TEST_OUTPUT" | grep -q 'Test Suites:'; then
               SUITE_FAILED=$(echo "$TEST_OUTPUT" | awk '/Test Suites:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
-              if echo "$TEST_OUTPUT" | grep -q 'Test suite failed to run'; then
-                SUITE_ERROR=true
-                BUILD_ERRORS=1  # Set build errors to 1 for suite errors
-              fi
             fi
-          
+
+            # Parse individual test results
             if echo "$TEST_OUTPUT" | grep -q 'Tests:'; then
-                PASSED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="passed,") print $(i-1)}')
-                FAILED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
-                SKIPPED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="skipped,") print $(i-1)}')
-                TOTAL=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="total") print $(i-1)}')
+              PASSED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="passed,") print $(i-1)}')
+              FAILED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="failed,") print $(i-1)}')
+              SKIPPED=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="skipped,") print $(i-1)}')
+              TOTAL=$(echo "$TEST_OUTPUT" | awk '/Tests:/ {for(i=1;i<=NF;i++) if($i=="total") print $(i-1)}')
+
+              PASSED=${PASSED:-0}
+              FAILED=${FAILED:-0}
+              SKIPPED=${SKIPPED:-0}
+              TOTAL=${TOTAL:-0}
+
+              # Build the Slack message with test results
+              SLACK_MESSAGE="*Test Results:*\n*Passed:* $PASSED\n*Failed:* $FAILED\n*Skipped:* $SKIPPED\n*Total:* $TOTAL"
             fi
-          
-            PASSED=${PASSED:-0}
-            FAILED=${FAILED:-0}
-            SKIPPED=${SKIPPED:-0}
-            TOTAL=${TOTAL:-0}
-            SUITE_FAILED=${SUITE_FAILED:-0}
-          
-            echo "PASSED=$PASSED" >> $GITHUB_ENV
-            echo "FAILED=$FAILED" >> $GITHUB_ENV
-            echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
-            echo "TOTAL=$TOTAL" >> $GITHUB_ENV
-            echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
-            echo "BUILD_ERRORS=$BUILD_ERRORS" >> $GITHUB_ENV
-          
-            if [ "$FAILED" -eq 0 ] && [ "$SUITE_FAILED" -eq 0 ] && [ "$BUILD_ERRORS" -eq 0 ]; then
-              OVERALL_STATUS="success"
-              OVERALL_STATUS_EMOJI=":large_green_circle:"
-            else
+
+            # Check if no tests were run
+            if [ "$TOTAL" -eq 0 ]; then
               OVERALL_STATUS="failure"
               OVERALL_STATUS_EMOJI=":red_circle:"
+              SLACK_MESSAGE="*No tests were run.*"
             fi
-          
-            echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
-            echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
-          
-            if [ "$OVERALL_STATUS" == "failure" ]; then
-              exit 1
+
+            # If any test suite failed (captures code/import errors etc.), override the overall status to failure
+            if [ "$SUITE_FAILED" -gt 0 ]; then
+              OVERALL_STATUS="failure"
+              OVERALL_STATUS_EMOJI=":red_circle:"
+              SLACK_MESSAGE="$SLACK_MESSAGE\n*Test Suites Failed:* $SUITE_FAILED"
+            elif [ "$FAILED" -eq 0 ] && [ "$TOTAL" -gt 0 ]; then
+              OVERALL_STATUS="success"
+              OVERALL_STATUS_EMOJI=":large_green_circle:"
             fi
+          fi
+
+          # Write environment variables to pass between workflow steps
+          echo "PASSED=$PASSED" >> $GITHUB_ENV
+          echo "FAILED=$FAILED" >> $GITHUB_ENV
+          echo "SKIPPED=$SKIPPED" >> $GITHUB_ENV
+          echo "TOTAL=$TOTAL" >> $GITHUB_ENV
+          echo "SUITE_FAILED=$SUITE_FAILED" >> $GITHUB_ENV
+          echo "OVERALL_STATUS=$OVERALL_STATUS" >> $GITHUB_ENV
+          echo "OVERALL_STATUS_EMOJI=$OVERALL_STATUS_EMOJI" >> $GITHUB_ENV
+          echo "SLACK_MESSAGE=$SLACK_MESSAGE" >> $GITHUB_ENV
+
+          # Exit with failure if the overall status is failure
+          if [ "$OVERALL_STATUS" == "failure" ]; then
+            exit 1
           fi
 
       - name: Send Slack Notification
@@ -109,13 +110,11 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify RPC TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n*Test Results:*\n*Pass:* ${{ env.PASSED }} *Fail:* ${{ env.FAILED }} *Skip:* ${{ env.SKIPPED }} *Total:* ${{ env.TOTAL }}\n*Build Errors:* ${{ env.BUILD_ERRORS }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
+                    "text": "${{ env.OVERALL_STATUS_EMOJI }} *zkVerify RPC TEST STATUS:* ${{ env.OVERALL_STATUS }} ${{ env.OVERALL_STATUS_EMOJI }}\n${{ env.SLACK_MESSAGE }}\n\n*Build URL:* <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|Click here to view the build>"
                   }
                 }
               ]
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.QA_SLACK_WEBHOOK_URL }}
-
-
-
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
