Position of the image is working locally, failing if i move it, checking what happens when pushed

--- a/.github/workflows/CI-rpc-tests.yml
+++ b/.github/workflows/CI-rpc-tests.yml
@@ -25,7 +25,7 @@ jobs:
           mkdir -p src/rpc-tests/reports
           echo "Starting Docker container for RPC tests..."
           
-          docker run --rm rpc-tests:latest \
+          docker run --rm \
             -e SEED_PHRASE_1=${{ secrets.QA_SEED_PHRASE_1 }} \
             -e SEED_PHRASE_2=${{ secrets.QA_SEED_PHRASE_2 }} \
             -e SEED_PHRASE_3=${{ secrets.QA_SEED_PHRASE_3 }} \
@@ -33,7 +33,7 @@ jobs:
             -e SEED_PHRASE_5=${{ secrets.QA_SEED_PHRASE_5 }} \
             -e SEED_PHRASE_6=${{ secrets.QA_SEED_PHRASE_6 }} \
             -v ${{ github.workspace }}/src/rpc-tests/reports:/usr/src/app/reports \
-            2>&1 | tee src/rpc-tests/reports/test_output.txt
+            rpc-tests:latest 2>&1 | tee src/rpc-tests/reports/test_output.txt
         working-directory: .
 
       - name: Parse Test Results
