Construct slack message if fail or success

--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -128,6 +128,7 @@ jobs:
         working-directory: src/e2e-tests
 
       - name: Parse Test Results
+        if: always() && (failure() || success())
         run: |
           TEST_OUTPUT=$(cat reports/test_output.txt || echo "")
 
