--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: HorizenLabs/zkVerify-qa
-          ref: feat/always-build
+          ref: main
           clean: true
           fetch-depth: 1
 
@@ -120,16 +120,6 @@ jobs:
           docker compose down -v
           ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION }} docker compose build --no-cache
           ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION }} docker compose up -d
-        working-directory: src/e2e-tests
-
-      - name: Wait for Docker Containers to be ready
-        if: always()
-        run: sleep 30
-
-      - name: Log Docker Containers
-        if: always()
-        run: |
-          docker logs subquery-node
         working-directory: src/e2e-tests
 
       - name: Wait for Ethereum contract to be deployed
