--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ test-report-*.html
 src/e2e-tests/services/zkVerify
 src/e2e-tests/services/nh-attestation-bot
 src/e2e-tests/services/zkv-attestation-contracts
+src/e2e-tests/*.tar
 src/proof-generator/fflonk/circuit/data
 src/proof-generator/groth16/circuit/data
 src/proof-generator/boojum/data
